--- a/Galactic.EventLog/Galactic.EventLog.csproj
+++ b/Galactic.EventLog/Galactic.EventLog.csproj
@@ -34,13 +34,11 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\Versioning\AutoAssemblyVersion.cs">
+      <Link>AutoAssemblyVersion.cs</Link>
+    </Compile>
     <Compile Include="Event.cs" />
     <Compile Include="EventLog.cs" />
     <Compile Include="IEventLog.cs" />
