--- a/Galactic.PowerShell/Galactic.PowerShell.csproj
+++ b/Galactic.PowerShell/Galactic.PowerShell.csproj
@@ -37,13 +37,11 @@
       <Private>True</Private>
       <HintPath>..\packages\System.Management.Automation.6.1.7601.17515\lib\net45\System.Management.Automation.dll</HintPath>
     </Reference>
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\Versioning\AutoAssemblyVersion.cs">
+      <Link>AutoAssemblyVersion.cs</Link>
+    </Compile>
     <Compile Include="IPowerShellScript.cs" />
     <Compile Include="PowerShell.cs" />
     <Compile Include="PowerShellScript.cs" />
