--- a/Galactic.LDAP/Galactic.LDAP.csproj
+++ b/Galactic.LDAP/Galactic.LDAP.csproj
@@ -34,13 +34,12 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices.Protocols" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\Versioning\AutoAssemblyVersion.cs">
+      <Link>AutoAssemblyVersion.cs</Link>
+    </Compile>
     <Compile Include="LDAP.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
