Added XML documentation generation to debug projects. Changed DataMember attributes to not emit a default value, and also to have the correct names when serialized. Added Event and EventStatusType classes to Microdata.SchemaOrg.

--- a/Galactic.Microdata.SchemaOrg/Galactic.Microdata.SchemaOrg.csproj
+++ b/Galactic.Microdata.SchemaOrg/Galactic.Microdata.SchemaOrg.csproj
@@ -20,6 +20,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\Galactic.Microdata.SchemaOrg.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -49,6 +50,8 @@
     <Compile Include="Article.cs" />
     <Compile Include="CreativeWork.cs" />
     <Compile Include="EntryPoint.cs" />
+    <Compile Include="Event.cs" />
+    <Compile Include="EventStatusType.cs" />
     <Compile Include="ImageObject.cs" />
     <Compile Include="Intangible.cs" />
     <Compile Include="MediaObject.cs" />
