Microdata.SchemaOrg changes. Made Event public. Added the Photograph class. Added methods to return microdata annotated HTML. Added HonorificPrefix field to Person.

--- a/Galactic.Microdata.SchemaOrg/Galactic.Microdata.SchemaOrg.csproj
+++ b/Galactic.Microdata.SchemaOrg/Galactic.Microdata.SchemaOrg.csproj
@@ -57,6 +57,7 @@
     <Compile Include="MediaObject.cs" />
     <Compile Include="NewsArticle.cs" />
     <Compile Include="Person.cs" />
+    <Compile Include="Photograph.cs" />
     <Compile Include="Place.cs" />
     <Compile Include="Thing.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
