Added an XML comment for ActiveDirectoryRoleProvider and fixed the wording of an exception to be more accurate. Added SimpleMappingRoleProvider class. Allows for adding users to roles stored in a configuration item. Updated the solution version to 1.1.0.71.

--- a/Galactic.Web.Security/Galactic.Web.Security.csproj
+++ b/Galactic.Web.Security/Galactic.Web.Security.csproj
@@ -43,6 +43,7 @@
     <Compile Include="..\Versioning\AutoAssemblyVersion.cs">
       <Link>AutoAssemblyVersion.cs</Link>
     </Compile>
+    <Compile Include="SimpleMappingRoleProvider.cs" />
     <Compile Include="ActiveDirectoryRoleProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
