--- a/Galactic.ActiveDirectory/Galactic.ActiveDirectory.csproj
+++ b/Galactic.ActiveDirectory/Galactic.ActiveDirectory.csproj
@@ -33,7 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DnDns">
-      <HintPath>..\..\SharedLibraries\Release\DnDNS\DnDns.dll</HintPath>
+      <HintPath>..\packages\DnDns.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
