--- a/Galactic.ActiveDirectory/Galactic.ActiveDirectory.csproj
+++ b/Galactic.ActiveDirectory/Galactic.ActiveDirectory.csproj
@@ -37,6 +37,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.DirectoryServices.Protocols" />
   </ItemGroup>
   <ItemGroup>
