Reset the DnDns reference location to SharedLibraries/Release/DnDns. Updated the assembly copyright year to 2016. Updated version to 1.3.0.0.

--- a/Galactic.ActiveDirectory/Galactic.ActiveDirectory.csproj
+++ b/Galactic.ActiveDirectory/Galactic.ActiveDirectory.csproj
@@ -33,7 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DnDns">
-      <HintPath>..\packages\DnDns.dll</HintPath>
+      <HintPath>..\..\SharedLibraries\Release\DnDNS\DnDns.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
