Updated version to 1.3.0.499 . Also added SQL scripts in EventLog.Sql that can be used as a template for creating the tables necessary for the event log in a Microsoft SQL Server database.

--- a/Galactic.EventLog.Sql/Galactic.EventLog.Sql.csproj
+++ b/Galactic.EventLog.Sql/Galactic.EventLog.Sql.csproj
@@ -54,6 +54,12 @@
       <Name>Galactic.Sql</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="SQLScripts\SqlEventLog-CreateTables.sql" />
+    <None Include="SQLScripts\SqlEventLog-DropTables.sql" />
+    <None Include="SQLScripts\SqlEventLog-InitializeTables.sql" />
+    <None Include="SQLScripts\SqlEventLog-StoredProcedures.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>call "$(SolutionDir)PostBuild.bat" "$(SolutionDir)" $(SolutionName) $(ProjectName) $(ConfigurationName) "$(TargetPath)" $(TargetFileName)</PostBuildEvent>
