Renames; Okta Group properties and methods; and Rest Response types.
Renamed LDAP -> Ldap to follow standard .NET framework API conventions.
Renamed REST -> Rest to follow standard .NET framework API conventions.
Created RestResponse types, to consolidate the value and message components of responses into a single class.
Finished Group properties.
Reworked OktaClient to use OktaJsonRestResponse objects.
Added GetGroupMembership and UpdateGroup methods to OktaClient.

--- a/Galactic.Identity.ActiveDirectory/Galactic.Identity.ActiveDirectory.csproj
+++ b/Galactic.Identity.ActiveDirectory/Galactic.Identity.ActiveDirectory.csproj
@@ -18,7 +18,7 @@
     <PackageReference Include="DnsClient" Version="1.5.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Galactic.LDAP\Galactic.LDAP.csproj" />
     <ProjectReference Include="..\Galactic.Identity\Galactic.Identity.csproj" />
+    <ProjectReference Include="..\Galactic.Ldap\Galactic.Ldap.csproj" />
   </ItemGroup>
 </Project>
