Hash generalizations, GoogleWorkspaceClient.CreateUser()
Implemented a more generic Hash class that supports all general hash algorithms implemented by Microsoft's hasher.
Implemented GoogleWorkspaceClient.CreateUser().

--- a/Galactic.Identity.GoogleWorkspace/Galactic.Identity.GoogleWorkspace.csproj
+++ b/Galactic.Identity.GoogleWorkspace/Galactic.Identity.GoogleWorkspace.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Galactic.Cryptography\Galactic.Cryptography.csproj" />
     <ProjectReference Include="..\Galactic.Identity\Galactic.Identity.csproj" />
   </ItemGroup>
 
