GWS DeleteGroup() and convenience methods. m
Implemented GoogleWorkspaceClient.DeleteGroup().
Added try catches to GoogleWorkspaceClient request execution calls.
Added GoogleWorkspaceClient.BuildServiceAccountCredential to make it easier to config the authentication for the client.
Added DirectoryApiScopes with a list of properties as defined by Google's Directory API to make it easier to define scopes the client should request from the API.

--- a/Galactic.Identity.GoogleWorkspace/Galactic.Identity.GoogleWorkspace.csproj
+++ b/Galactic.Identity.GoogleWorkspace/Galactic.Identity.GoogleWorkspace.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Galactic.Cryptography\Galactic.Cryptography.csproj" />
+    <ProjectReference Include="..\Galactic.FileSystem\Galactic.FileSystem.csproj" />
     <ProjectReference Include="..\Galactic.Identity\Galactic.Identity.csproj" />
   </ItemGroup>
 
